[gd_scene load_steps=18 format=2]

[ext_resource path="res://addons/material_spray/painter/painter.gd" type="Script" id=1]
[ext_resource path="res://addons/material_spray/painter/viewtotexture.tres" type="Material" id=2]
[ext_resource path="res://addons/material_spray/shaders/texture2view.shader" type="Shader" id=3]
[ext_resource path="res://addons/material_spray/shaders/show_pattern.shader" type="Shader" id=4]
[ext_resource path="res://addons/material_spray/shaders/texture2view_lsb.shader" type="Shader" id=5]
[ext_resource path="res://addons/material_spray/shaders/seams.shader" type="Shader" id=6]
[ext_resource path="res://addons/material_spray/painter/paint_viewport.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/material_spray/painter/paint.tres" type="Material" id=8]
[ext_resource path="res://addons/material_spray/painter/paint_mr.tres" type="Material" id=9]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 1, 1 )

[sub_resource type="ViewportTexture" id=9]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/model_transform = Transform( 0.0107968, 1.11759e-008, -0.999942, -0.841422, 0.540301, -0.00908521, 0.54027, 0.841472, 0.00583355, 7.63617, 14.2108, -56.3953 )
shader_param/fovy_degrees = 70.0
shader_param/z_near = 0.2
shader_param/z_far = 248.925
shader_param/aspect = 1.83214
shader_param/view2texture = SubResource( 9 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 4 )
shader_param/brush_size = Vector2( 0.25, 0.25 )
shader_param/pattern_scale = 10.0
shader_param/texture_angle = 0.0

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 5 )
shader_param/model_transform = Transform( 0.0107968, 1.11759e-008, -0.999942, -0.841422, 0.540301, -0.00908521, 0.54027, 0.841472, 0.00583355, 7.63617, 14.2108, -56.3953 )
shader_param/fovy_degrees = 70.0
shader_param/z_near = 0.2
shader_param/z_far = 248.925
shader_param/aspect = 1.83214
shader_param/view2texture = SubResource( 9 )

[sub_resource type="ViewportTexture" id=10]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 6 )
shader_param/tex = SubResource( 10 )

[node name="Painter" type="Node"]
script = ExtResource( 1 )

[node name="View2Texture" type="Viewport" parent="."]
editor/display_folded = true
size = Vector2( 1024, 600 )
own_world = true
transparent_bg = true
keep_3d_linear = true
render_target_v_flip = true
render_target_update_mode = 0

[node name="Camera" type="Camera" parent="View2Texture"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
current = true
far = 25.0

[node name="PaintedMesh" type="MeshInstance" parent="View2Texture"]
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="Texture2View" type="Viewport" parent="."]
editor/display_folded = true
size = Vector2( 2048, 2048 )
own_world = true
transparent_bg = true
keep_3d_linear = true
render_target_update_mode = 0

[node name="Camera" type="Camera" parent="Texture2View"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 20 )
projection = 1
current = true

[node name="PaintedMesh" type="MeshInstance" parent="Texture2View"]
transform = Transform( 1, -5.09656e-008, 1.56295e-008, 5.09656e-008, 1, 5.78721e-010, -1.56295e-008, -5.78721e-010, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="PaintedMeshWhite" type="MeshInstance" parent="Texture2View"]
transform = Transform( 1, -5.09656e-008, 1.56295e-008, 5.09656e-008, 1, 5.78721e-010, -1.56295e-008, -5.78721e-010, 1, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 5 )

[node name="Texture2ViewLsb" type="Viewport" parent="."]
editor/display_folded = true
size = Vector2( 2048, 2048 )
own_world = true
transparent_bg = true
keep_3d_linear = true
render_target_update_mode = 0

[node name="Camera" type="Camera" parent="Texture2ViewLsb"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 20 )
projection = 1
current = true

[node name="PaintedMesh" type="MeshInstance" parent="Texture2ViewLsb"]
transform = Transform( 1, -5.09656e-008, 1.56295e-008, 5.09656e-008, 1, 5.78721e-010, -1.56295e-008, -5.78721e-010, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 6 )

[node name="Seams" type="Viewport" parent="."]
editor/display_folded = true
size = Vector2( 2048, 2048 )
own_world = true
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 1

[node name="SeamsRect" type="ColorRect" parent="Seams"]
material = SubResource( 8 )
margin_right = 2048.0
margin_bottom = 2048.0

[node name="AlbedoPaint" parent="." instance=ExtResource( 7 )]
paint = ExtResource( 8 )

[node name="MRPaint" parent="." instance=ExtResource( 7 )]
paint = ExtResource( 9 )

[node name="EmissionPaint" parent="." instance=ExtResource( 7 )]
paint = ExtResource( 8 )

[node name="DepthPaint" parent="." instance=ExtResource( 7 )]
paint = ExtResource( 8 )
